Fixed alignment

--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -51,6 +51,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    margin: 0;
   }
   .SearchBar input {
     width: 80%;
@@ -60,6 +61,7 @@
     color: #2e2e2e;
     text-align: center;
     font-size: 1.2rem;
+    margin-left: 0;
     background-color: #ffffff;
     border: none;
     box-shadow: 0px 5px 4px rgba(255, 255, 255, 0.09);
